// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuidanceLinksTest linkComponentType is defined as ExternalLink 1`] = `
"<span className="guidance-links">
  <ExternalLink href="https://url1" onClick={[Function: onClick]}>
    TEXT1
  </ExternalLink>
</span>"
`;

exports[`GuidanceLinksTest links is empty 1`] = `""`;

exports[`GuidanceLinksTest links is not null and correct with best practice and regular links (excludes BEST PRACTICE) 1`] = `
"<span className="className">
  <ExternalLink href="https://url1" onClick={[Function: onClick]}>
    TEXT1
  </ExternalLink>
  <span>
    , 
  </span>
  <ExternalLink href="https://url2" onClick={[Function: onClick]}>
    TEXT2
  </ExternalLink>
</span>"
`;

exports[`GuidanceLinksTest links is not null and correct with one best practice link 1`] = `"<span className="className" />"`;

exports[`GuidanceLinksTest links is not null and correct with one regular link 1`] = `
"<span className="className">
  <ExternalLink href="https://url1" onClick={[Function: onClick]}>
    TEXT1
  </ExternalLink>
</span>"
`;

exports[`GuidanceLinksTest links is not null and correct with two regular links 1`] = `
"<span className="className">
  <ExternalLink href="https://url1" onClick={[Function: onClick]}>
    TEXT1
  </ExternalLink>
  <span>
    , 
  </span>
  <ExternalLink href="https://url2" onClick={[Function: onClick]}>
    TEXT2
  </ExternalLink>
</span>"
`;

exports[`GuidanceLinksTest links is null 1`] = `""`;
